@@ -12,6 +12,7 @@ o new method "addContent" for NehanPagedElement to push addional text to paged-e
 o add "nehan-clone" class to the blocks generated by cloned style.
 o add "data-root-block-id" attribute to output dom for the blocks of direct children of body.
 * treat "true" or "false" value in dataset as 'boolean'.
+! rename LayoutContext to CursorContext.
 
 version 5.0.4 2014/12/8
 ========================
